version/0.13/_sources/examples/02-modal_analyses/index.rst.txt


.. _sphx_glr_examples_02-modal_analyses:

.. _modal_examples:

Modal analysis examples
=======================
These examples show how to use DPF to extract and manipulate
results from modal analyses.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The ansys.dpf.core.results.Result class which instances are created by the ansys.dpf.core.model.Model gives access to helpers to request results on specific mesh and time scopings. With those helpers, working on a custom spatial and temporal subset of the model is straightforward.">

.. only:: html

  .. image:: /examples/02-modal_analyses/images/thumb/sphx_glr_00-compare_modes_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-modal_analyses_00-compare_modes.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Use Result Helpers to compare mode shapes for solids and then shells</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to extract mode shapes from a modal analysis result and how to plot and animate them.">

.. only:: html

  .. image:: /examples/02-modal_analyses/images/thumb/sphx_glr_01-plot_and_animate_modes_thumb.png
    :alt:

  :ref:`sphx_glr_examples_02-modal_analyses_01-plot_and_animate_modes.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Plot and animate mode shapes with DPF</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /examples/02-modal_analyses/00-compare_modes
   /examples/02-modal_analyses/01-plot_and_animate_modes

